# muondecay

./: .gitignore  Data Read.ipynb  MuonJupyter.py  MuonJupyterWidget.py  README.md  SerialTest.ipynb  analysis.py  detect.py  detect_thread.py  multiprocessing.ipynb  muonGUI.py  muonGUI2.py  muonGUI_old.py  muon_detect  muonj.ipynb  pyproject.toml  setup.py  time.ipynb
src/: __init__.py  analysis.py  detect.py  muonGUI.py
src/muon/: MuonJupyter.py  analysis.py  detect.py  muonGUI.py
src/muondecay/: MuonJupyter.py  detect.py  muonGUI.py
tests/: SerialTest.ipynb  histupdate.py  mplhistupdate.py  textchange.py
