
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muondecay"
version = "0.1.5"
description = "Read and analyze data from TeachSpin's muon detector."
authors = [{ name = "Mark W. Sprague", email = "spraguem@ecu.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"scipy",
	"pyserial",
	"lmfit",
	"matplotlib",
	"tk"
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
muon_detect = "muondecay.detect:main"

[project.gui-scripts]
muon_detector = "muondecay.muonGUI:main"

[project.urls]
Homepage = "https://github.com/sprague252/muondecay/"
Source = "https://github.com/sprague252/muondecay/"
"Bug Tracker" = "https://github.com/sprague252/muondecay/issues"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]